post method added

--- a/srcs/requirements/www/delete.html
+++ b/srcs/requirements/www/delete.html
@@ -7,5 +7,7 @@
 	</head>
 	<body>
 		<center><h1>Delete</h1></center>
+		<center><h3>curl -X DELETE localhost:8080/delete.html</h3></center>
+		<center><h3>curl -X POST -F "file=@Makefile" http://localhost:8080/test_POST.mk</h3></center>
 	</body>
 </html>
