fix conditional jump

--- a/srcs/requirements/www/vss/index.html
+++ b/srcs/requirements/www/vss/index.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 
-	<h1>Welcome to the very safe website</h1>
-	<p>You have access to a Calculator and a python code interpreter.</p>
+	<h1>Welcome to the Webserv Calculator</h1>
+	<p>You have access to a Calculator</p>
 
 	<a href="vss/calculator.html">Calculator</a>
-	<a href="interpreter.html">Interpreter</a>
 
 </body>
 </html>
