--- a/srcs/requirements/www/vss/index.html
+++ b/srcs/requirements/www/vss/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-	<h1>Welcome to the Webserv Calculator</h1>
-	<p>You have access to a Calculator</p>
+	<h1>Welcome to the Very Secure Website</h1>
+	<p>You have access to a Calculator and a python interpreter</p>
 
-	<a href="vss/calculator.html">Calculator</a>
+	<a href="calculator.html">Calculator</a><br>
+	<a href="interpreter.html">Interpreter</a>
 
 </body>
 </html>
